--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "eslint-plugin-react": "^7.4.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "lorem-ipsum": "^1.0.5",
     "mini-css-extract-plugin": "^0.4.0",
+    "node-lipsum": "^1.0.1",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.5"
   }
