--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
+    "cassandra-driver": "^3.5.0",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
