--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
+    "nodemon": "^1.17.5",
     "pg": "^6.1.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
