--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "html-webpack-plugin": "^3.2.0",
     "lorem-ipsum": "^1.0.5",
     "mini-css-extract-plugin": "^0.4.0",
+    "newrelic": "^4.2.0",
     "node-lipsum": "^1.0.1",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.5"
