--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.4.0",
     "react-image-gallery": "^0.8.8",
     "react-redux": "^5.0.7",
+    "redis": "^2.8.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0"
   },
