set up artillery and perform multiple stress tests, saved results

--- a/server/artilleryConfig.yml
+++ b/server/artilleryConfig.yml
@@ -22,7 +22,8 @@ scenarios:
     - flow:
         - loop:
             - get:
-                url: "/headerphotos/{{$randomNumber(1, 10000000)}}"
+              #  url: "/headerphotos/9900003"
+               url: "/headerphotos/{{$randomNumber(1, 10000000)}}"
           count: 100
 
 
