--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "test": "mocha server/spec",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -43,6 +45,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.11",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -55,6 +58,7 @@
     "html-webpack-plugin": "^3.2.0",
     "lorem-ipsum": "^1.0.5",
     "mini-css-extract-plugin": "^0.4.0",
+    "mocha": "^5.2.0",
     "newrelic": "^4.2.0",
     "node-lipsum": "^1.0.1",
     "webpack": "^4.10.2",
